// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unholy tests test anullProps() 1`] = `
Object {
  "otherProp": 3,
  "prop": null,
}
`;

exports[`unholy tests test anullProps() 2`] = `
Object {
  "otherProp": null,
  "prop": null,
}
`;

exports[`unholy tests test anullProps() 3`] = `
Object {
  "obj": Object {
    "anotherArrayInObj": Array [],
    "arrayInObj": Array [],
    "otherProp": 5,
    "prop": 4,
  },
}
`;
